// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add provider 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"source\\": \\"../foo\\",
      \\"providers\\": [
        {
          \\"test\\": \\"test.provider1\\"
        }
      ],
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      }
    ]
  }
}"
`;

exports[`complex providers 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      },
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider2\\"
      }
    ]
  },
  \\"module\\": {
    \\"test\\": {
      \\"param1\\": \\"name\\",
      \\"param2\\": 1,
      \\"param3\\": [
        \\"id1\\",
        \\"id2\\"
      ],
      \\"source\\": \\"../foo\\",
      \\"providers\\": [
        {
          \\"test.src\\": \\"test.provider1\\"
        },
        {
          \\"test.dst\\": \\"test.provider2\\"
        }
      ],
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`depend on module 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"source\\": \\"../foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"resource\\": {
        \\"name\\": \\"foo\\",
        \\"depends_on\\": [
          \\"module.test\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/resource\\",
            \\"uniqueId\\": \\"resource\\"
          }
        }
      }
    }
  }
}"
`;

exports[`depend on other module 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"module\\": {
    \\"test_1\\": {
      \\"source\\": \\"../foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test_1\\",
          \\"uniqueId\\": \\"test_1\\"
        }
      }
    },
    \\"test_2\\": {
      \\"source\\": \\"../foo\\",
      \\"depends_on\\": [
        \\"module.test_1\\"
      ],
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test_2\\",
          \\"uniqueId\\": \\"test_2\\"
        }
      }
    }
  }
}"
`;

exports[`minimal configuration 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"source\\": \\"../foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`multiple providers 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      },
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider2\\"
      }
    ]
  },
  \\"module\\": {
    \\"test\\": {
      \\"source\\": \\"../foo\\",
      \\"providers\\": [
        {
          \\"test\\": \\"test.provider1\\"
        },
        {
          \\"test\\": \\"test.provider2\\"
        }
      ],
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`pass variables 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"param1\\": \\"name\\",
      \\"param2\\": 1,
      \\"param3\\": [
        \\"id1\\",
        \\"id2\\"
      ],
      \\"source\\": \\"../foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`reference module 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"source\\": \\"../foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"resource\\": {
        \\"name\\": \\"\${module.test.name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/resource\\",
            \\"uniqueId\\": \\"resource\\"
          }
        }
      }
    }
  }
}"
`;

exports[`reference module list 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"source\\": \\"../foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"resource\\": {
        \\"name\\": \\"test\\",
        \\"names\\": \\"\${module.test.names}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/resource\\",
            \\"uniqueId\\": \\"resource\\"
          }
        }
      }
    }
  }
}"
`;

exports[`set variable 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"param1\\": \\"value1\\",
      \\"source\\": \\"../foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`simple provider 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      }
    ]
  },
  \\"module\\": {
    \\"test\\": {
      \\"source\\": \\"../foo\\",
      \\"providers\\": [
        {
          \\"test\\": \\"test.provider1\\"
        }
      ],
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;
